# Difference-calculator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
diff_calc/scripts/: gendiff.py
gendiff/: __init__.py  differ.py  formatter.py  parser.py
gendiff/formatter/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_differ.py  test_formatter.py  test_formatter_plain.py  test_gendiff.py  test_parser.py
tests/fixtures/: output.py
tests/functional_test/: test_cli.py
