[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["kananev <russrage@gmail.com>"]
packages = [
    { include = "diff_calc"}
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
pytest = "^6.2.4"

[tool.poetry.scripts]
gendiff = "diff_calc.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
